fix: fix wrong color for active link in nav

--- a/shelter/pages/main/style.scss
+++ b/shelter/pages/main/style.scss
@@ -203,6 +203,7 @@ button {
 .nav__link.active {
   padding-bottom: 3px;
   border-bottom: 3px solid #f1cdb3;
+  color: #FAFAFA;
 }
 
 // header media burger
@@ -1111,3 +1112,4 @@ h4 {
   font-weight: 400;
   font-style: normal;
 }
+
